--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -188,3 +188,11 @@ body {
   position: relative;
   z-index: 10000; /* The select2 dropdown has a z-index of 9999 */
 }
+
+.bootstrap-dialog-title {
+  display: inline-block;
+}
+
+.bootstrap-dialog-close-button {
+  float: right;
+}
