--- a/app/views/register.html
+++ b/app/views/register.html
@@ -55,7 +55,7 @@
         <div class="col-xs-12 col-sm-6">
           <div class="panel-white panel-white-bordered- clearfix">
             <h2>Open an account</h2>
-            <form id="RegisterForm" class="form-horizontal" role="form" enctype="multipart/form-data" action="http://localhost:32769/en/my-account/login" accept-charset="UTF-8" method="post" onsubmit="validateForm('RegisterForm', {'displayErrorMessage': false}); return false;">
+            <form id="RegisterForm" class="form-horizontal">
               <div class="form-group">
                 <label for="email" class="control-label col-lg-3 required">Email</label>
 
