--- a/app/views/topbar.html
+++ b/app/views/topbar.html
@@ -2,13 +2,7 @@
 <nav id="header" class="navbar navbar-custom navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" aria-expanded="false" aria-controls="navbar">-->
-        <!--<span class="sr-only"><?php echo __('Toggle navigation'); ?></span>-->
-        <!--<span class="icon-bar"></span>-->
-        <!--<span class="icon-bar"></span>-->
-        <!--<span class="icon-bar"></span>-->
-      <!--</button>-->
-      <a class="navbar-brand" href="/" title="Upela">
+      <a class="navbar-brand" href="#/index" title="Upela">
         <img src="images/header/logo-upela.png" alt=""/>
         <span translate>MAIN.TITLE</span>
       </a>
@@ -16,7 +10,7 @@
     <div id="main-navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav" id="main-navbar-nav">
         <!--<li><a href="<?php echo Language::getUrl('/'); ?>"><?php echo __('Home'); ?></a></li>-->
-        <li><a href="/professional" translate="MAIN.MENU.PROFESSIONALS"></a></li>
+        <li><a href="#/settings" translate="MAIN.MENU.PROFESSIONALS"></a></li>
 
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -108,21 +102,20 @@
         </li>
 
         <li ng-if="!IsLoggedIn">
-          <a href="#" ng-click="register()">
+          <a href="#/register">
             <span class="fa fa-user-plus"></span>
             <span translate="MAIN.MENU.REGISTER"></span>
           </a>
         </li>
 
         <li class="dropdown" ng-if="IsLoggedIn">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+          <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
             <span class="glyphicon glyphicon-user"></span> _CLI1
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <!--<li class="divider"></li>-->
             <li>
-              <a href="http://localhost:32769/en/account/logout.php">
+              <a href="#" ng-click="logout()">
                 <span class="glyphicon glyphicon-off"></span> Logout
               </a>
             </li>
@@ -130,28 +123,28 @@
         </li>
 
         <li class="dropdown" ng-if="IsLoggedIn">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+          <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
             <span class="glyphicon glyphicon-th"></span> My account
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a href="/my-account">
+              <a href="#/my-account">
                 <span class="glyphicon glyphicon-th"></span> My account
               </a>
             </li>
             <li>
-              <a href="/my-account">
+              <a href="#/my-account">
                 <span class="fa fa-paper-plane"></span> My shipments
               </a>
             </li>
             <li>
-              <a href="/my-invoices">
+              <a href="#/settings">
                 <span class="fa fa-file-text"></span> My invoices
               </a>
             </li>
             <li>
-              <a href="http://localhost:32769/en/my-account/payments">
+              <a href="#/settings">
                 <span class="fa fa-list"></span> My payments
               </a>
             </li>
@@ -161,7 +154,7 @@
               </a>
             </li>
             <li>
-              <a href="http://localhost:32769/en/my-account/my-information">
+              <a href="#/settings">
                 <span class="fa fa-cogs"></span> Settings
               </a>
             </li>
